--- a/index.html
+++ b/index.html
@@ -1,12 +1,7 @@
 <html>
 <head>
+  <font size="7" color="pink">Hola</Font>
 </head>
 <body>
-
-
-<IMG SRC="mariposasara.jpg">
-
-
-
 </body>
 </html>
