--- a/index.html
+++ b/index.html
@@ -1,7 +1,14 @@
 <html>
-<head>
-  <font size="7" color="pink">Sara</Font>
+<head><title>
+</title>
 </head>
 <body>
+
+<center>
+<Font Size="8" Color="purple">LOS ARTISTAS MÁS CONOCIDOS DE TRAP LATINO</font>
+</centre>
+<p><a href="galeria.html"> Pincha aqui para ir a galeria</a> </p>
+
+
 </body>
 </html>
